Fix order notes section border and spacing for theme Orchid Store

--- a/sass/compat/themes/orchid-store/_checkout-payment-methods.scss
+++ b/sass/compat/themes/orchid-store/_checkout-payment-methods.scss
@@ -5,8 +5,3 @@
 #{ $_body-theme-selector-prefix } #payment div.payment_box {
 	color: inherit;
 }
-
-#{ $_body-theme-selector-prefix } .fc-wrapper #payment .payment_methods > .wc_payment_method > input[type=radio] + label:before,
-#{ $_body-theme-selector-prefix } .fc-wrapper #payment ul.payment_methods > .wc_payment_method > input[type=radio]:first-child:checked + label:after { 
-	top: remsize( .55rem );
-}
